--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.597.0",
+  "version": "1.598.0-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -21,7 +21,7 @@
   "dependencies": {
     "@salutejs/plasma-core": "1.209.0",
     "@salutejs/plasma-hope": "1.355.0",
-    "@salutejs/plasma-new-hope": "0.339.0",
+    "@salutejs/plasma-new-hope": "0.340.0-dev.0",
     "@salutejs/plasma-themes": "0.38.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
