--- a/packages/sdds-dfa/package.json
+++ b/packages/sdds-dfa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa",
-  "version": "0.325.0",
+  "version": "0.326.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS DFA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-dfa"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.339.0",
+    "@salutejs/plasma-new-hope": "0.340.0-dev.0",
     "@salutejs/sdds-themes": "0.48.0"
   },
   "peerDependencies": {
