--- a/packages/sdds-finai/package.json
+++ b/packages/sdds-finai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finai",
-  "version": "0.318.0",
+  "version": "0.319.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS FinAI web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/sdds-fiai"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.339.0",
+    "@salutejs/plasma-new-hope": "0.340.0-dev.0",
     "@salutejs/sdds-themes": "0.48.0"
   },
   "peerDependencies": {
