--- a/utils/plasma-docs-ui/package.json
+++ b/utils/plasma-docs-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-docs-ui",
-  "version": "0.508.0",
+  "version": "0.509.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -20,7 +20,7 @@
   "dependencies": {
     "@salutejs/plasma-core": "1.209.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
-    "@salutejs/plasma-web": "1.597.0",
+    "@salutejs/plasma-web": "1.598.0-dev.0",
     "@types/marked": "3.0.1",
     "codesandbox": "2.2.3",
     "marked": "3.0.7",
