--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.354.0-dev.0",
+  "version": "0.354.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.340.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.340.0",
     "@salutejs/plasma-tokens": "1.123.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-typo": "0.42.0"
