--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.327.0-dev.0",
+  "version": "0.327.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.340.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.340.0",
     "@salutejs/plasma-themes": "0.38.0"
   },
   "peerDependencies": {
