--- a/website/plasma-ui-docs/package.json
+++ b/website/plasma-ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui-docs",
-  "version": "0.589.0-dev.0",
+  "version": "0.589.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.509.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.509.0",
     "@salutejs/plasma-icons": "1.226.0",
     "@salutejs/plasma-tokens": "1.123.0",
     "@salutejs/plasma-ui": "1.331.0",
