--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -7,14 +7,16 @@ jobs:
   publish:
     name: Publish RC version
     uses: ./.github/workflows/publish-common.yml
+    permissions:
+        id-token: write
+        contents: write
     with:
       with-update-package-lock: true
       commit-message: "Update package-lock.json files"
       auto-options: '--no-changelog'
     secrets:
       gh_token: ${{ secrets.GH_TOKEN }}
-      npm_registry_token: ${{ secrets.NPM_REGISTRY_TOKEN }}
-  
+
   catch:
     name: Handle errors
     runs-on: ubuntu-22.04
