--- a/website/plasma-b2c-docs/package.json
+++ b/website/plasma-b2c-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c-docs",
-  "version": "0.223.0",
+  "version": "0.224.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-b2c": "1.596.0",
-    "@salutejs/plasma-docs-ui": "0.509.0",
+    "@salutejs/plasma-b2c": "1.597.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.510.0-dev.0",
     "@salutejs/plasma-icons": "1.226.0",
     "@salutejs/plasma-tokens-b2c": "0.65.0",
     "@salutejs/plasma-tokens-web": "1.69.0",
