--- a/website/sdds-dfa-docs/package.json
+++ b/website/sdds-dfa-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa-docs",
-  "version": "0.256.0",
+  "version": "0.257.0-dev.0",
   "description": "SDDS-DFA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,10 +31,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.509.0",
+    "@salutejs/plasma-docs-ui": "0.510.0-dev.0",
     "@salutejs/plasma-icons": "1.226.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-dfa": "0.326.0",
+    "@salutejs/sdds-dfa": "0.327.0-dev.0",
     "@salutejs/sdds-themes": "0.48.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
