--- a/utils/plasma-sb-utils/package.json
+++ b/utils/plasma-sb-utils/package.json
@@ -37,7 +37,7 @@
     "@types/styled-components": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.1.1",
+    "styled-components": "5.3.1",
     "typescript": "4.2.4"
   },
   "publishConfig": {
