--- a/website/plasma-website/tsconfig.json
+++ b/website/plasma-website/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
+        "typeRoots": ["node_modules/@types"],
+        "types": ["node"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
