--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.355.0-dev.0",
+  "version": "0.356.0-dev.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.341.0-dev.0",
-    "@salutejs/plasma-tokens": "1.123.0",
+    "@salutejs/plasma-new-hope": "0.342.0-dev.0",
+    "@salutejs/plasma-tokens": "1.124.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
@@ -39,10 +39,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.209.0",
-    "@salutejs/plasma-cy-utils": "0.139.0",
-    "@salutejs/plasma-icons": "1.226.0",
-    "@salutejs/plasma-sb-utils": "0.209.0",
+    "@salutejs/plasma-core": "1.210.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.140.0-dev.0",
+    "@salutejs/plasma-icons": "1.227.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.210.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
