--- a/packages/sdds-crm/package.json
+++ b/packages/sdds-crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm",
-  "version": "0.329.0-dev.0",
+  "version": "0.329.0",
   "description": "Salute Design System / React UI kit for SDDS CRM web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-crm"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.342.0-dev.0",
-    "@salutejs/sdds-themes": "0.49.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.342.0",
+    "@salutejs/sdds-themes": "0.49.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -56,10 +56,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.210.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.140.0-dev.0",
-    "@salutejs/plasma-icons": "1.227.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.210.0-dev.0",
+    "@salutejs/plasma-core": "1.210.0",
+    "@salutejs/plasma-cy-utils": "0.140.0",
+    "@salutejs/plasma-icons": "1.227.0",
+    "@salutejs/plasma-sb-utils": "0.210.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
