--- a/website/sdds-cs-docs/package.json
+++ b/website/sdds-cs-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs-docs",
-  "version": "0.323.0-dev.0",
+  "version": "0.323.0",
   "description": "SDDS CS documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.511.0-dev.0",
-    "@salutejs/plasma-icons": "1.227.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.511.0",
+    "@salutejs/plasma-icons": "1.227.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-cs": "0.334.0-dev.0",
-    "@salutejs/sdds-themes": "0.49.0-dev.0",
+    "@salutejs/sdds-cs": "0.334.0",
+    "@salutejs/sdds-themes": "0.49.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
