--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@salutejs/plasma-new-hope",
   "version": "0.342.0",
-  "description": "Salute Design System blueprint",
+  "description": "Salute Design System blueprint asdadas",
   "main": "cjs/index.js",
   "module": "es/index.js",
   "types": "types/index.d.ts",
