--- a/packages/plasma-tokens/package.json
+++ b/packages/plasma-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens",
-  "version": "1.124.0",
+  "version": "1.125.0-dev.0",
   "description": "plasma-tokens package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
