--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.329.0",
+  "version": "0.330.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.342.0",
+    "@salutejs/plasma-new-hope": "0.343.0-dev.0",
     "@salutejs/plasma-themes": "0.38.0"
   },
   "peerDependencies": {
@@ -56,10 +56,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.210.0",
-    "@salutejs/plasma-cy-utils": "0.140.0",
-    "@salutejs/plasma-icons": "1.227.0",
-    "@salutejs/plasma-sb-utils": "0.210.0",
+    "@salutejs/plasma-core": "1.211.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.141.0-dev.0",
+    "@salutejs/plasma-icons": "1.228.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.211.0-dev.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
