--- a/packages/sdds-platform-ai/package.json
+++ b/packages/sdds-platform-ai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-platform-ai",
-  "version": "0.329.0",
+  "version": "0.330.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS PLATFORM-AI web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -29,8 +29,8 @@
     "directory": "packages/sdds-platform-ai"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.342.0",
-    "@salutejs/sdds-themes": "0.49.0"
+    "@salutejs/plasma-new-hope": "0.343.0-dev.0",
+    "@salutejs/sdds-themes": "0.50.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -55,10 +55,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.210.0",
-    "@salutejs/plasma-cy-utils": "0.140.0",
-    "@salutejs/plasma-icons": "1.227.0",
-    "@salutejs/plasma-sb-utils": "0.210.0",
+    "@salutejs/plasma-core": "1.211.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.141.0-dev.0",
+    "@salutejs/plasma-icons": "1.228.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.211.0-dev.0",
     "@storybook/addon-docs": "8.6.14",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/manager-api": "8.6.14",
@@ -114,7 +114,9 @@
     ],
     "atLeast": 99.9
   },
-  "contributors": ["salute.developers@gmail.com"],
+  "contributors": [
+    "salute.developers@gmail.com"
+  ],
   "sideEffects": [
     "*.css"
   ]
