--- a/utils/plasma-docs-ui/package.json
+++ b/utils/plasma-docs-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-docs-ui",
-  "version": "0.511.0",
+  "version": "0.512.0-dev.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -18,9 +18,9 @@
     "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.210.0",
+    "@salutejs/plasma-core": "1.211.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.54.0",
-    "@salutejs/plasma-web": "1.600.0",
+    "@salutejs/plasma-web": "1.601.0-dev.0",
     "@types/marked": "3.0.1",
     "codesandbox": "2.2.3",
     "marked": "3.0.7",
