--- a/utils/plasma-sb-utils/package.json
+++ b/utils/plasma-sb-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-sb-utils",
-  "version": "0.210.0",
+  "version": "0.211.0-dev.0",
   "description": "Code shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.210.0",
-    "@salutejs/plasma-icons": "1.227.0",
+    "@salutejs/plasma-core": "1.211.0-dev.0",
+    "@salutejs/plasma-icons": "1.228.0-dev.0",
     "@storybook/addon-actions": "8.6.14",
     "@storybook/react": "8.6.14",
     "param-case": "^3.0.4"
