--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.335.0-dev.0",
+  "version": "0.335.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.343.0-dev.0",
-    "@salutejs/sdds-themes": "0.50.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.343.0",
+    "@salutejs/sdds-themes": "0.50.0"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -55,10 +55,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.211.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.141.0-dev.0",
-    "@salutejs/plasma-icons": "1.228.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.211.0-dev.0",
+    "@salutejs/plasma-core": "1.211.0",
+    "@salutejs/plasma-cy-utils": "0.141.0",
+    "@salutejs/plasma-icons": "1.228.0",
+    "@salutejs/plasma-sb-utils": "0.211.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
