--- a/packages/sdds-dfa/package.json
+++ b/packages/sdds-dfa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa",
-  "version": "0.329.0-dev.0",
+  "version": "0.329.0",
   "description": "Salute Design System / React UI kit for SDDS DFA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/sdds-dfa"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.343.0-dev.0",
-    "@salutejs/sdds-themes": "0.50.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.343.0",
+    "@salutejs/sdds-themes": "0.50.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -37,10 +37,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.211.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.141.0-dev.0",
-    "@salutejs/plasma-icons": "1.228.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.211.0-dev.0",
+    "@salutejs/plasma-core": "1.211.0",
+    "@salutejs/plasma-cy-utils": "0.141.0",
+    "@salutejs/plasma-icons": "1.228.0",
+    "@salutejs/plasma-sb-utils": "0.211.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
