feat: add readme file for action

--- a/.github/actions/find-changed-components/package.json
+++ b/.github/actions/find-changed-components/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
