feat(sdds-platform-ai): fix types generation

--- a/packages/sdds-platform-ai/package.json
+++ b/packages/sdds-platform-ai/package.json
@@ -91,17 +91,16 @@
     "preapi-report": "npm run generate:typings",
     "api-report": "npx api-extractor run --local",
     "prepare": "npm run build",
-    "prebuild": "rm -rf ./components ./es ./helpers ./hocs ./hooks ./mixins ./tokens ./types ./utils index.d.ts index.d.ts.map index.js index.js.map && npm run prebuild:css",
-    "prebuild:css": "rm -rf src-css && ./scripts/copy-linaria-components.sh",
     "build": "npm run build:styled-components && npm run build:css",
     "postbuild": "npm run generate:typings",
-    "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "swc ./src -d ./styled-components/cjs --strip-leading-paths -C module.type=commonjs --config-file ../../swc.config.json",
-    "build:styled-components:esm": "swc ./src -d ./styled-components/es --strip-leading-paths -C module.type=es6 --config-file ../../swc.config.json",
-    "build:css": "BABEL_ENV=esm SC_NAMESPACE=sdds-srvc rollup -c",
+    "prebuild:css": "rm -rf src-css && ./scripts/copy-linaria-components.sh",
+    "build:css": "rm -rf dist/css && rollup -c",
     "postbuild:css": "rm -rf src-css",
+    "build:styled-components": "rm -rf dist/styled-components && npm run build:styled-components:esm && npm run build:styled-components:cjs",
+    "build:styled-components:cjs": "swc ./src -d ./dist/styled-components/cjs --strip-leading-paths --config-file ../../swc.config.json -C module.type=commonjs",
+    "build:styled-components:esm": "swc ./src -d ./dist/styled-components/es --strip-leading-paths --config-file ../../swc.config.json -C module.type=es6",
     "pregenerate:typings": "rm -rf components/**/*.d.ts && rm -f index.d.ts && rm -f mixins/index.d.ts && rm -f tokens/index.d.ts",
-    "generate:typings": "tsc --outDir . --emitDeclarationOnly",
+    "generate:typings": "rm -rf types && tsc",
     "storybook": "npm run storybook:sc",
     "storybook:sc": "USE_STYLED_COMPONENTS=true storybook dev -p ${PORT:-7002} -c .storybook",
     "storybook:build": "storybook build -c .storybook -o build-sb",
