--- a/website/sdds-platform-ai-docs/package.json
+++ b/website/sdds-platform-ai-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-platform-ai-docs",
-  "version": "0.322.0-dev.0",
+  "version": "0.322.0",
   "description": "SDDS-PLATFORM-AI documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,9 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.513.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.513.0",
     "@salutejs/plasma-icons": "1.228.0",
     "@salutejs/plasma-typo": "0.42.0",
+    "@salutejs/sdds-platform-ai": "0.331.0",
+    "@salutejs/sdds-themes": "0.51.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
@@ -41,11 +43,9 @@
     "prism-react-renderer": "2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.1",
-    "url-loader": "^4.1.1",
     "react-hook-form": "7.53.0",
-    "@salutejs/sdds-platform-ai": "0.331.0-dev.0",
-    "@salutejs/sdds-themes": "0.51.0-dev.0"
+    "styled-components": "5.3.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.6.1",
