--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -16,7 +16,8 @@
         "sdds-netology",
         "sdds-scan",
         "sdds-bizcom",
-        "sdds-platform-ai"
+        "sdds-platform-ai",
+        "sdds-sber-os"
     ],
     "PACKAGES_TYPESENSE": [
         "plasma-b2c",
