--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "bootstrap:sdds-insol": "npx lerna bootstrap --scope='@salutejs/sdds-insol' --scope='@salutejs/{plasma-sb-utils,plasma-tokens,plasma-tokens-utils,core-themes,plasma-typo,plasma-new-hope,plasma-colors,sdds-themes,plasma-core,plasma-docs-ui,sdds-insol-docs}'",
     "bootstrap:sdds-crm:dev": "npx lerna bootstrap --scope='@salutejs/sdds-crm' --scope='@salutejs/{core-themes,plasma-new-hope,sdds-themes,plasma-core,plasma-docs-ui,sdds-crm-docs}'",
     "bootstrap:sdds-netology:dev": "npx lerna bootstrap --scope='@salutejs/sdds-netology' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-themes,plasma-core,plasma-docs-ui,sdds-netology-docs}'",
-    "bootstrap:sdds-scan:dev": "npx lerna bootstrap --scope='@salutejs/sdds-scan' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-core,plasma-docs-ui,sdds-scan-docs}'"
+    "bootstrap:sdds-scan:dev": "npx lerna bootstrap --scope='@salutejs/sdds-scan' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-core,plasma-docs-ui,sdds-scan-docs}'",
+    "bootstrap:sdds-sber-os:dev": "npx lerna bootstrap --scope='@salutejs/sdds-sber-os' --scope='@salutejs/{core-themes,plasma-new-hope,plasma-core}'"
   },
   "devDependencies": {
     "@actions/core": "1.2.7",
