chore: update package name in .github

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -17,7 +17,7 @@
         "sdds-scan",
         "sdds-bizcom",
         "sdds-platform-ai",
-        "sdds-sber-os"
+        "sdds-os"
     ],
     "PACKAGES_TYPESENSE": [
         "plasma-b2c",
