ci: clean symlink before update lock files

--- a/.github/actions/update-package-lock/action.yml
+++ b/.github/actions/update-package-lock/action.yml
@@ -33,6 +33,7 @@ runs:
           git reset --hard
           npm i --silent ${{ env.OPTIONS }}
         command: |
+          npx lerna clean -y
           npx lerna bootstrap --ignore-scripts
 
     - name: Root deps don't update correctly on first regeneration
