--- a/.github/workflows/documentation-deploy-pr.yml
+++ b/.github/workflows/documentation-deploy-pr.yml
@@ -4,6 +4,7 @@ on:
     pull_request_target:
         branches:
             - dev
+            - next-insol
     pull_request:
         branches:
             - master
