--- a/website/sdds-platform-ai-docs/package.json
+++ b/website/sdds-platform-ai-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-platform-ai-docs",
-  "version": "0.323.0",
+  "version": "0.324.1-next-insol.0",
   "description": "SDDS-PLATFORM-AI documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,11 +31,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.514.0",
+    "@salutejs/plasma-docs-ui": "0.515.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-platform-ai": "0.332.0",
-    "@salutejs/sdds-themes": "0.52.0",
+    "@salutejs/sdds-platform-ai": "0.333.1-next-insol.0",
+    "@salutejs/sdds-themes": "0.53.0-next-insol.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "docusaurus-theme-search-typesense": "0.25.0",
