--- a/packages/sdds-netology/package.json
+++ b/packages/sdds-netology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-netology",
-  "version": "0.332.0",
+  "version": "0.333.1-next-insol.0",
   "description": "Salute Design System / React UI kit for SDDS NETOLOGY web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "exports": {
@@ -32,7 +32,7 @@
     "directory": "packages/sdds-netology"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.345.0",
+    "@salutejs/plasma-new-hope": "0.346.1-next-insol.0",
     "@salutejs/plasma-themes": "0.39.0"
   },
   "peerDependencies": {
@@ -57,10 +57,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.16.0",
-    "@salutejs/plasma-core": "1.213.0",
-    "@salutejs/plasma-cy-utils": "0.143.0",
+    "@salutejs/plasma-core": "1.214.0-next-insol.0",
+    "@salutejs/plasma-cy-utils": "0.144.0-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-sb-utils": "0.213.0",
+    "@salutejs/plasma-sb-utils": "0.214.0-next-insol.0",
     "@types/node": "16.7.13",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
