--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga-docs",
-  "version": "0.122.0",
+  "version": "0.123.1-next-insol.0",
   "description": "PLASMA GIGA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.514.0",
-    "@salutejs/plasma-giga": "0.328.0",
+    "@salutejs/plasma-docs-ui": "0.515.1-next-insol.0",
+    "@salutejs/plasma-giga": "0.329.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
     "@salutejs/plasma-themes": "0.39.0",
     "@salutejs/plasma-typo": "0.42.0",
