--- a/website/plasma-ui-docs/package.json
+++ b/website/plasma-ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui-docs",
-  "version": "0.594.0",
+  "version": "0.595.1-next-insol.0",
   "description": "Plasma Documentation.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,10 +31,10 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.514.0",
+    "@salutejs/plasma-docs-ui": "0.515.1-next-insol.0",
     "@salutejs/plasma-icons": "1.228.0",
-    "@salutejs/plasma-tokens": "1.126.0",
-    "@salutejs/plasma-ui": "1.335.0",
+    "@salutejs/plasma-tokens": "1.127.0-next-insol.0",
+    "@salutejs/plasma-ui": "1.336.0-next-insol.0",
     "@salutejs/use-virtual": "2.0.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
