ci(publish): handle event actor [no ci]

--- a/.github/workflows/publish-feature.yml
+++ b/.github/workflows/publish-feature.yml
@@ -12,6 +12,7 @@ concurrency:
 jobs:
   publish:
     name: Publish feature version
+    if: ${{ github.actor == 'github-merge-queue[bot]' }}
     uses: ./.github/workflows/publish-common.yml
     with:
       with-update-package-lock: true
